--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,6 @@
 services:
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: mrfzy00/spring-petclinic-docker:latest
     ports:
       - 8000:8000
       - 8080:80
