--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -30,6 +30,8 @@ jobs:
           major_pattern: "BREAKING CHANGE:"
           minor_pattern: "feat:"
           version_format: "${major}.${minor}.${patch}"
+          bump_each_commit: true
+          search_commit_body: true
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
@@ -37,4 +39,26 @@ jobs:
           push: true
           tags: 
             ${{ secrets.DOCKER_USERNAME }}/springboot-petclinic-docker:latest , ${{ secrets.DOCKER_USERNAME }}/springboot-petclinic-docker:${{ steps.semver.outputs.version }}
+
+  publish:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up gcloud CLI
+        uses: google-github-actions/setup-gcloud@v0.3.0
+        with:
+          project_id: ${{ secrets.GCE_PROJECT_ID }}
+          service_account_key: ${{ secrets.GCE_SA_KEY }}
+          export_default_credentials: true
+
+      - name: Access gcloud CLI
+        run: |
+          gcloud auth configure-docker
+
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Transform value for docker-compose.yml
+        run: |
+
+  
             
