--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,10 @@ services:
       dockerfile: Dockerfile
     ports:
       - 8000:8000
-      - 8080:80
+      - 8080:8080
     environment:
       - SERVER_PORT=8080
-      - DATABASE_URL=jdbc:postgresql://postgresdb/petclinic
-    volumes:
-      - ./:/app
+      - DATABASE_URL=${{ secrets.DATABASE_URL }}
     depends_on:
       - postgresdb
   postgresdb:
@@ -18,9 +16,9 @@ services:
     ports:
       - 5432:5432
     environment:
-      - POSTGRES_USER=petclinic
-      - POSTGRES_PASSWORD=petclinic
-      - POSTGRES_DB=petclinic
+      - POSTGRES_USER=${{ secrets.POSTGRES_USER }}
+      - POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
+      - POSTGRES_DB=${{ secrets.POSTGRES_DB }}
     volumes:
       - postgres_data:/var/lib/postgresql/data
 volumes:
