--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -57,8 +57,31 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Transform value for docker-compose.yml
+      - name: Modify environment variables in docker-compose.yml
         run: |
+          sed -i 's|DATABASE_URL_PLACEHOLDER|${{ secrets.DATABASE_URL }}|g' docker-compose.yml
+          sed -i 's|POSTGRES_USER_PLACEHOLDER|${{ secrets.POSTGRES_USER }}|g' docker-compose.yml
+          sed -i 's|POSTGRES_PASSWORD_PLACEHOLDER|${{ secrets.POSTGRES_PASSWORD }}|g' docker-compose.yml
+          sed -i 's|POSTGRES_DB_PLACEHOLDER|${{ secrets.POSTGRES_DB }}|g' docker-compose.yml
 
-  
-            
+      - name: scp into GCP instance
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.GCE_IP_INSTANCE }}
+          username: ${{ secrets.GCE_SSH_USERNAME }}
+          key: ${{ secrets.GCE_SSH_PRIVATE_KEY }}
+          source: "docker-compose.yml"
+          target: "/home/${{ secrets.GCE_SSH_USERNAME }}/"
+
+      - name: SSH into GCP instance and deploy Django
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.GCE_IP_INSTANCE }}
+          username: ${{ secrets.GCE_SSH_USERNAME }}
+          key: ${{ secrets.GCE_SSH_PRIVATE_KEY }}
+          script: |
+            docker compose -f /home/${{ secrets.GCE_SSH_USERNAME }}/docker-compose.yml down
+            docker compose -f /home/${{ secrets.GCE_SSH_USERNAME }}/docker-compose.yml build --pull
+            docker compose -f /home/${{ secrets.GCE_SSH_USERNAME }}/docker-compose.yml up -d
+
+            docker image prune -f
