--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -43,16 +43,16 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - name: Set up gcloud CLI
-        uses: google-github-actions/setup-gcloud@v0.3.0
+      - id: 'auth'
+        uses: 'google-github-actions/auth@v2'
         with:
-          project_id: ${{ secrets.GCE_PROJECT_ID }}
-          service_account_key: ${{ secrets.GCE_SA_KEY }}
-          export_default_credentials: true
-
-      - name: Access gcloud CLI
-        run: |
-          gcloud auth configure-docker
+          credentials_json: '${{ secrets.GCE_SA_KEY }}'
+    
+      - name: 'Set up Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v2'
+    
+      - name: 'Use gcloud CLI'
+        run: 'gcloud info'
 
       - name: Checkout repository
         uses: actions/checkout@v3
