--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -59,10 +59,10 @@ jobs:
 
       - name: Modify environment variables in docker-compose.yml
         run: |
-          sed -i 's|DATABASE_URL_PLACEHOLDER|${{ secrets.DATABASE_URL }}|g' docker-compose.yml
-          sed -i 's|POSTGRES_USER_PLACEHOLDER|${{ secrets.POSTGRES_USER }}|g' docker-compose.yml
-          sed -i 's|POSTGRES_PASSWORD_PLACEHOLDER|${{ secrets.POSTGRES_PASSWORD }}|g' docker-compose.yml
-          sed -i 's|POSTGRES_DB_PLACEHOLDER|${{ secrets.POSTGRES_DB }}|g' docker-compose.yml
+          sed -i 's|${{ secrets.DATABASE_URL }}|${{ secrets.DATABASE_URL }}|g' docker-compose.yml
+          sed -i 's|${{ secrets.POSTGRES_USER }}|${{ secrets.POSTGRES_USER }}|g' docker-compose.yml
+          sed -i 's|${{ secrets.POSTGRES_PASSWORD }}|${{ secrets.POSTGRES_PASSWORD }}|g' docker-compose.yml
+          sed -i 's|${{ secrets.POSTGRES_DB }}|${{ secrets.POSTGRES_DB }}|g' docker-compose.yml
 
       - name: scp into GCP instance
         uses: appleboy/scp-action@master
