--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -59,11 +59,11 @@ jobs:
 
       - name: Modify environment variables in docker-compose.yml
         run: |
-          sed -i "s|DATABASE_URL=.*|DATABASE_URL=${{ secrets.DATABASE_URL }}|g" docker-compose.yml
-          sed -i "s|POSTGRES_USER=.*|POSTGRES_USER=${{ secrets.POSTGRES_USER }}|g" docker-compose.yml
-          sed -i "s|POSTGRES_PASSWORD=.*|POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}|g" docker-compose.yml
-          sed -i "s|POSTGRES_DB=.*|POSTGRES_DB=${{ secrets.POSTGRES_DB }}|g" docker-compose.yml
-          
+          sed -i "s|DATABASE_URL=.*|DATABASE_URL=${{ secrets.DATABASE_URL }}|" docker-compose.yml
+          sed -i "s|POSTGRES_USER=.*|POSTGRES_USER=${{ secrets.POSTGRES_USER }}|" docker-compose.yml
+          sed -i "s|POSTGRES_PASSWORD=.*|POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}|" docker-compose.yml
+          sed -i "s|POSTGRES_DB=.*|POSTGRES_DB=${{ secrets.POSTGRES_DB }}|" docker-compose.yml  
+                  
       - name: scp into GCP instance
         uses: appleboy/scp-action@master
         with:
