--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -42,6 +42,7 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
+    environment: pass
     steps:
       - id: 'auth'
         uses: 'google-github-actions/auth@v2'
@@ -58,11 +59,16 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Modify environment variables in docker-compose.yml
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+          POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
         run: |
           sed -i "s|DATABASE_URL=.*|DATABASE_URL=${{ secrets.DATABASE_URL }}|" docker-compose.yml
           sed -i "s|POSTGRES_USER=.*|POSTGRES_USER=${{ secrets.POSTGRES_USER }}|" docker-compose.yml
           sed -i "s|POSTGRES_PASSWORD=.*|POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}|" docker-compose.yml
-          sed -i "s|POSTGRES_DB=.*|POSTGRES_DB=${{ secrets.POSTGRES_DB }}|" docker-compose.yml  
+          sed -i "s|POSTGRES_DB=.*|POSTGRES_DB=${{ secrets.POSTGRES_DB }}|" docker-compose.yml
                   
       - name: scp into GCP instance
         uses: appleboy/scp-action@master
