--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -42,7 +42,6 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
-    environment: pass
     steps:
       - id: 'auth'
         uses: 'google-github-actions/auth@v2'
@@ -65,10 +64,10 @@ jobs:
           POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
           POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
         run: |
-          sed -i "s|DATABASE_URL=.*|DATABASE_URL=${{ secrets.DATABASE_URL }}|" docker-compose.yml
-          sed -i "s|POSTGRES_USER=.*|POSTGRES_USER=${{ secrets.POSTGRES_USER }}|" docker-compose.yml
-          sed -i "s|POSTGRES_PASSWORD=.*|POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}|" docker-compose.yml
-          sed -i "s|POSTGRES_DB=.*|POSTGRES_DB=${{ secrets.POSTGRES_DB }}|" docker-compose.yml
+          sed -i "s|DATABASE_URL=.*|DATABASE_URL=${{ secrets.DATABASE_URL }}|g" docker-compose.yml
+          sed -i "s|POSTGRES_USER=.*|POSTGRES_USER=${{ secrets.POSTGRES_USER }}|g" docker-compose.yml
+          sed -i "s|POSTGRES_PASSWORD=.*|POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}|g" docker-compose.yml
+          sed -i "s|POSTGRES_DB=.*|POSTGRES_DB=${{ secrets.POSTGRES_DB }}|g" docker-compose.yml
                   
       - name: scp into GCP instance
         uses: appleboy/scp-action@master
