--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -64,11 +64,9 @@ jobs:
           POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
           POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
         run: |
-          sed -i "s|DATABASE_URL=.*|DATABASE_URL=${{ secrets.DATABASE_URL }}|g" docker-compose.yml
-          sed -i "s|POSTGRES_USER=.*|POSTGRES_USER=${{ secrets.POSTGRES_USER }}|g" docker-compose.yml
-          sed -i "s|POSTGRES_PASSWORD=.*|POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}|g" docker-compose.yml
-          sed -i "s|POSTGRES_DB=.*|POSTGRES_DB=${{ secrets.POSTGRES_DB }}|g" docker-compose.yml
-                  
+          cp docker-compose.yml docker-compose.yml.template
+          envsubst < docker-compose.yml.template > docker-compose.yml
+          
       - name: scp into GCP instance
         uses: appleboy/scp-action@master
         with:
