--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - 8080:8080
     environment:
       - SERVER_PORT=8080
-      - DATABASE_URL=${{ secrets.DATABASE_URL }}
+      - DATABASE_URL=${DATABASE_URL}
     depends_on:
       - postgresdb
   postgresdb:
@@ -14,9 +14,9 @@ services:
     ports:
       - 5432:5432
     environment:
-      - POSTGRES_USER=${{ secrets.POSTGRES_USER }}
-      - POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
-      - POSTGRES_DB=${{ secrets.POSTGRES_DB }}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
     volumes:
       - postgres_data:/var/lib/postgresql/data
 volumes:
