--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -66,7 +66,7 @@ jobs:
         run: |
           cp docker-compose.yml docker-compose.yml.template
           envsubst < docker-compose.yml.template > docker-compose.yml
-          
+
       - name: scp into GCP instance
         uses: appleboy/scp-action@master
         with:
@@ -76,7 +76,7 @@ jobs:
           source: "docker-compose.yml"
           target: "/home/${{ secrets.GCE_SSH_USERNAME }}/"
 
-      - name: SSH into GCP instance and deploy Django
+      - name: SSH into GCP instance and deploy Maven
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.GCE_IP_INSTANCE }}
