--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -72,6 +72,7 @@ jobs:
         with:
           host: ${{ secrets.GCE_IP_INSTANCE }}
           username: ${{ secrets.GCE_SSH_USERNAME }}
+          password: ${{ secrets.GCE_SSH_PASSWORD }}
           key: ${{ secrets.GCE_SSH_PRIVATE_KEY }}
           source: "docker-compose.yml"
           target: "/home/${{ secrets.GCE_SSH_USERNAME }}/"
